[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://PermanentMarker-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 144
outline_size = 6
outline_color = Color( 0.121569, 0.654902, 0.0117647, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
rect_min_size = Vector2( 1920, 1080 )
custom_constants/margin_right = 120
custom_constants/margin_top = 120
custom_constants/margin_left = 120
custom_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 120.0
margin_right = 1800.0
margin_bottom = 960.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1680.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.501961, 1, 0, 1 )
text = "Super Memory"
align = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 1680.0
margin_bottom = 400.0
rect_min_size = Vector2( 800, 0 )
custom_fonts/font = SubResource( 2 )
text = "Spela"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 450.0
margin_right = 1680.0
margin_bottom = 594.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 666.0
margin_bottom = 141.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Antal par:"

[node name="CardCountLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 686.0
margin_top = 3.0
margin_right = 1352.0
margin_bottom = 141.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "8"
align = 1

[node name="PlusButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1372.0
margin_right = 1516.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
custom_fonts/font = SubResource( 2 )
text = "+"

[node name="MinusButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1536.0
margin_right = 1680.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
custom_fonts/font = SubResource( 2 )
text = "-"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 644.0
margin_right = 1680.0
margin_bottom = 788.0
custom_constants/separation = 50

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 1486.0
margin_bottom = 144.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Avsluta"

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 1536.0
margin_right = 1680.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "?"
